# Humanoid-Robotics-assignments

./: README.md
src/01_git/: README.md
src/02_linear_algebra/: 02_linear_algebra-test.pro  02_linear_algebra.pro  CMakeLists.txt  README.md
src/02_linear_algebra/include/linear_algebra/: LinearAlgebra.h
src/02_linear_algebra/src/: LinearAlgebra.cpp  main  main.cpp
src/02_linear_algebra/test/: test_linear_algebra.cpp
src/03_odometry_calibration/: .gitignore  03_odometry_calibration-test.pro  03_odometry_calibration.pro  CMakeLists.txt  README.md
src/03_odometry_calibration/include/odometry_calibration/: CalibrationData.h  FileIO.h
src/03_odometry_calibration/scripts/: plot.gp
src/03_odometry_calibration/src/: FileIO.cpp  OdometryCalibration.cpp  main  main.cpp
src/03_odometry_calibration/test/: test_odometry_calibration.cpp
src/04_projective_geometry/: 04_projective_geometry-test.pro  04_projective_geometry.pro  CMakeLists.txt  README.md  test4.sln  test4.vcxproj  test4.vcxproj.filters
src/04_projective_geometry/include/projective_geometry/: ProjectiveGeometry.h
src/04_projective_geometry/src/: ProjectiveGeometry.cpp  main  main.cpp  test4.sln  test4.vcxproj  test4.vcxproj.filters
src/04_projective_geometry/test/: test_projective_geometry.cpp
src/05_forward_kinematics/: .gitignore  05_forward_kinematics-test.pro  05_forward_kinematics.pro  CMakeLists.txt  README.md
src/05_forward_kinematics/scripts/: plot.gp
src/05_forward_kinematics/src/: ForwardKinematics.cpp  main  main.cpp
src/05_forward_kinematics/test/: main  test_forward_kinematics.cpp
src/06_kdtree/: README.md  kd tree.py
src/07_octree/: 07_octree-test.pro  07_octree.pro  CMakeLists.txt  README.md
src/07_octree/data/: .gitignore
src/07_octree/include/octree/: FileIO.h  Octree.h
src/07_octree/scripts/: plot.gp
src/07_octree/src/: FileIO.cpp  Octree.cpp  main  main.cpp
src/07_octree/test/: test_octree.cpp
src/08_signed_distance_function/: .gitignore  08_signed_distance_function-test.pro  08_signed_distance_function.pro  CMakeLists.txt  README.md
src/08_signed_distance_function/include/signed_distance_function/: SignedDistanceFunction.h
src/08_signed_distance_function/scripts/: plot_3d.gp  plot_map.gp
src/08_signed_distance_function/src/: FileIO.cpp  SignedDistanceFunction.cpp  main.cpp
src/08_signed_distance_function/test/: test_signed_distance_function.cpp
src/09_icp/: .gitignore  09_icp-test.pro  09_icp.pro  CMakeLists.txt  README.md
src/09_icp/include/icp/: ICP.h
src/09_icp/scripts/: plot.gp
src/09_icp/src/: ICP.cpp  main.cpp
src/09_icp/test/: test_icp.cpp
src/10_particle_filter/: .gitignore  10_particle_filter-test.pro  10_particle_filter.pro  CMakeLists.txt  README.md
src/10_particle_filter/include/particle_filter/: ParticleFilter.h
src/10_particle_filter/scripts/: plot.gp
src/10_particle_filter/src/: FileIO.cpp  ParticleFilter.cpp  main.cpp
src/10_particle_filter/test/: test_particle_filter.cpp
src/11_path_planning/: .gitignore  11_path_planning-test.pro  11_path_planning.pro  CMakeLists.txt  README.md
src/11_path_planning/include/path_planning/: AbstractNode.h  ClosedList.h  FileIO.h  GridMap.h  GridNode.h  Heuristic.h  OpenList.h  PathPlanning.h
src/11_path_planning/scripts/: plot.gp
src/11_path_planning/src/: ClosedList.cpp  FileIO.cpp  OpenList.cpp  PathPlanning.cpp  main.cpp
src/11_path_planning/test/: test_path_planning.cpp
src/12_footstep_planning/: .gitignore  12_footstep_planning-test.pro  12_footstep_planning.pro  CMakeLists.txt  README.md
src/12_footstep_planning/include/footstep_planning/: AbstractNode.h  ClosedList.h  FileIO.h  FootstepMap.h  FootstepNode.h  FootstepPlanning.h  GridMap.h  Heuristic.h  OpenList.h  PathPlanning.h
src/12_footstep_planning/scripts/: plot.gp
src/12_footstep_planning/src/: ClosedList.cpp  FileIO.cpp  FootstepMap.cpp  FootstepNode.cpp  FootstepPlanning.cpp  OpenList.cpp  PathPlanning.cpp  main.cpp
src/12_footstep_planning/test/: test_footstep_planning.cpp
src/13_ara_star/: 13_ara_star-test.pro  13_ara_star.pro  CMakeLists.txt  README.md
src/13_ara_star/data/: .gitignore  map.pbm
src/13_ara_star/include/ara_star/: ARAStar.h  AbstractNode.h  ClosedList.h  FileIO.h  GridMap.h  GridNode.h  Heuristic.h  Logger.h  OpenList.h  PathPlanning.h
src/13_ara_star/scripts/: plot.gp
src/13_ara_star/src/: ARAStar.cpp  ClosedList.cpp  FileIO.cpp  GridNode.cpp  Logger.cpp  OpenList.cpp  PathPlanning.cpp  main.cpp
src/13_ara_star/test/: test_ara_star.cpp
src/14_zmp/: .gitignore  14_zmp-test.pro  14_zmp.pro  CMakeLists.txt  README.md
src/14_zmp/data/: robot.txt
src/14_zmp/include/zmp/: ZMP.h
src/14_zmp/scripts/: plot.gp
src/14_zmp/src/: ZMP.cpp  main.cpp
src/14_zmp/test/: test_zmp.cpp
src/15_inverse_kinematics/: .gitignore  15_inverse_kinematics-test.pro  15_inverse_kinematics.pro  CMakeLists.txt  README.md
src/15_inverse_kinematics/include/inverse_kinematics/: InverseKinematics.h
src/15_inverse_kinematics/scripts/: plot.gp
src/15_inverse_kinematics/src/: InverseKinematics.cpp  main.cpp
src/15_inverse_kinematics/test/: test_inverse_kinematics.cpp
src/16_rrt/: .gitignore  16_rrt-test.pro  16_rrt.pro  CMakeLists.txt  README.md
src/16_rrt/include/rrt/: AbstractNode.h  FileIO.h  GridMap.h  GridNode.h  Logger.h  RRT.h
src/16_rrt/scripts/: plot.gp
src/16_rrt/src/: FileIO.cpp  Logger.cpp  RRT.cpp  main.cpp
src/16_rrt/test/: test_rrt.cpp
src/17_irm/: .gitignore  17_irm-test.pro  17_irm.pro  CMakeLists.txt  README.md
src/17_irm/include/irm/: AbstractIRM.h  FileIO.h  IRM.h
src/17_irm/scripts/: plot-irm.gp  plot-rm.gp
src/17_irm/src/: AbstractIRM.cpp  FileIO.cpp  IRM.cpp  main.cpp
src/17_irm/test/: test_irm.cpp
src/includes/: windows-helpers.h
src/includes/angles/: angles.h
